# integer-roots

./: .gitignore  Makefile  README.md  cabal.project.local~  integer-roots-exe.tix  integer-roots.cabal  integer-roots.html  roots-exe.hp  roots-exe.tix  test  test.c  weigh.tix
Bench/: BenchIntegerRoots.hs
Bench/Weigh/: Main.hs
Math/NumberTheory/: Roots_.hs
Math/NumberTheory/Roots/: General_.hs  Squares_.hs
Math/NumberTheory/Roots/Squares/: Internal.hs  Internal2.hs  InternalBank_.hs  Internal_.hs
Math/NumberTheory/Utils/: ArthMtic_.hs  FloatingX_.hs  InternalFastDigits_.hs  ShortCircuit.hs  ShortCircuit_.hs
Math/c/: fsqrt.c  fsqrt.h
app/: Main.hs
test-suite/: Test.hs
test-suite/Math/NumberTheory/: TestUtils.hs
test-suite/Math/NumberTheory/Roots/: CubesTests_.hs  FourthTests_.hs  GeneralTests_.hs  SquaresTests_.hs
test-suite/Math/NumberTheory/TestUtils/: Wrappers.hs
