name:          integer-roots
version:       1.0.2.0
cabal-version: >=1.10
build-type:    Simple
license:       MIT
license-file:  LICENSE
copyright:     (c) 2011 Daniel Fischer, 2016-2021 Andrew Lelechenko.
maintainer:    Andrew Lelechenko andrew dot lelechenko at gmail dot com
homepage:      https://github.com/Bodigrim/integer-roots
bug-reports:   https://github.com/Bodigrim/integer-roots/issues
synopsis:      Integer roots and perfect powers
description:   Calculating integer roots and testing perfect powers of arbitrary precision. Originally part of <https://hackage.haskell.org/package/arithmoi arithmoi> package.
category:      Math, Algorithms, Number Theory
author:        Daniel Fischer, Andrew Lelechenko
tested-with:   GHC ==8.0.2 GHC ==8.2.2 GHC ==8.4.4 GHC ==8.6.5 GHC ==8.8.4 GHC ==8.10.7 GHC ==9.0.2 GHC ==9.2.8 GHC ==9.4.8 GHC ==9.6.6 GHC ==9.8.2 GHC ==9.10.1
extra-source-files:
  changelog.md
  README.md

source-repository head
  type: git
  location: https://github.com/Bodigrim/integer-roots

library
  build-depends:
    base >= 4.9 && <5
   ,vector >= 0.13.2.0
   ,fast-digits >= 0.3.2.0
   ,ghc-prim >= 0.11.0
   ,floating-bits >= 0.3.1.0
  if impl(ghc < 9.0)
    build-depends: integer-gmp <1.2
  else
    build-depends: ghc-bignum < 1.4
  exposed-modules:
    Math.NumberTheory.Roots
  other-modules:
    Math.NumberTheory.Primes.Small
    Math.NumberTheory.Roots.Cubes
    Math.NumberTheory.Roots.Fourth
    Math.NumberTheory.Roots.General
    Math.NumberTheory.Roots.Squares
    Math.NumberTheory.Roots.Squares.Internal
    Math.NumberTheory.Utils.BitMask
    Math.NumberTheory.Utils.FromIntegral
  default-language: Haskell2010 
  default-extensions: BangPatterns
  ghc-options: -Wall -Widentities -fspec-constr -fspec-constr-count=16 -fllvm -fexpose-all-unfoldings -fexcess-precision -threaded -funfolding-use-threshold=256 -O2 -fspecialise-aggressively
  -- ghc-options: -Wall -O2 -Widentities -Wcompat -mfma -optc-target -optcarm64-apple-macos14.5 -optc-mmacosx-version-min=14.5 -funfolding-use-threshold=16 -O2 -fexcess-precision -optc-O3 -optc-ffast-math -no-recomp -optc-static -optc-lamath -optc-DINTEGER32 -optc-larmpl_lp64 -threaded -optc-DAPPLE -optc-DWORST -optc-DNO_FLOAT128 -optc-DNO_OPENMP -optc-DFOO=$f -optc-DUSE_DOUBLE -optc-O3 -optc-lmpfr -optc-lgmp -optc-lm
  -- these following are additions to the fork  
  -- c-sources: Math/c/fsqrt.c 
  -- include-dirs:/opt/homebrew/Cellar/gcc/14.2.0/include 
  -- extra-lib-dirs:/opt/homebrew/Cellar/gcc/14.2.0/lib

test-suite integer-roots-tests
  build-depends:
    base >=4.9 && <5,
    integer-roots,
    smallcheck >=1.2 && <1.3,
    tasty >=0.10,
    tasty-hunit >=0.9 && <0.11,
    tasty-quickcheck >=0.9 && <0.11,
    tasty-smallcheck >=0.8 && <0.9
  other-modules:
    Math.NumberTheory.Roots.CubesTests
    Math.NumberTheory.Roots.FourthTests
    Math.NumberTheory.Roots.GeneralTests
    Math.NumberTheory.Roots.SquaresTests
    Math.NumberTheory.TestUtils
    Math.NumberTheory.TestUtils.Wrappers
  type: exitcode-stdio-1.0
  main-is: Test.hs
  default-language: Haskell2010
  hs-source-dirs: test-suite
  ghc-options: -Wall -Widentities -Wcompat

executable roots-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , integer-roots
                    --  , time >= 1.12.2 && < 1.13

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N4
