name:          integer-roots
version:       1.0.2.0
cabal-version: >=1.10
build-type:    Simple
license:       MIT
license-file:  LICENSE
copyright:     (c) 2011 Daniel Fischer, 2016-2021 Andrew Lelechenko.
maintainer:    Andrew Lelechenko andrew dot lelechenko at gmail dot com
homepage:      https://github.com/Bodigrim/integer-roots
bug-reports:   https://github.com/Bodigrim/integer-roots/issues
synopsis:      Integer roots and perfect powers
description:   Calculating integer roots and testing perfect powers of arbitrary precision. Originally part of <https://hackage.haskell.org/package/arithmoi arithmoi> package.
category:      Math, Algorithms, Number Theory
author:        Daniel Fischer, Andrew Lelechenko
tested-with:   GHC ==8.0.2 GHC ==8.2.2 GHC ==8.4.4 GHC ==8.6.5 GHC ==8.8.4 GHC ==8.10.7 GHC ==9.0.2 GHC ==9.2.8 GHC ==9.4.8 GHC ==9.6.6 GHC ==9.8.2 GHC ==9.10.1
extra-source-files:
  changelog.md
  README.md

source-repository head
  type: git
  location: https://github.com/Bodigrim/integer-roots

library
  build-depends:
    base >=4.9 && <5
   ,floating-bits >= 0.3.1.0
   ,ghc-prim >= 0.13.0
   ,quote-quot >= 0.2.1.0
  if impl(ghc < 9.0)
    build-depends: integer-gmp <1.2
  else
    build-depends: ghc-bignum < 1.4
  exposed-modules:
    Math.NumberTheory.Roots
    Math.NumberTheory.Roots_
  other-modules:
    Math.NumberTheory.Primes.Small
    Math.NumberTheory.Roots.Cubes
    Math.NumberTheory.Roots.Fourth
    Math.NumberTheory.Roots.General
    Math.NumberTheory.Roots.General_
    Math.NumberTheory.Roots.Squares
    Math.NumberTheory.Roots.Squares_
    Math.NumberTheory.Roots.Squares.Internal
    Math.NumberTheory.Roots.Squares.InternalBank_
    Math.NumberTheory.Roots.Squares.Internal_
    Math.NumberTheory.Utils.BitMask
    Math.NumberTheory.Utils.FromIntegral
    Math.NumberTheory.Utils.FloatingX_
    Math.NumberTheory.Utils.ArthMtic_
  default-language: Haskell2010
  ghc-options: -Wall 
               -Widentities 
               -Wcompat 
               -Wno-type-defaults
               -Wno-unused-top-binds
               -Wno-unused-matches
               -Wno-missed-specialisations 
               -O2 
              --  -threaded 
               -fllvm 
              --  -funfolding-use-threshold=50
               -mfma 
               -fproc-alignment=64
               -funbox-strict-fields
               -fliberate-case
               -optc-O3
               -optc-ffast-math
               -optc-march=native

test-suite integer-roots-tests
  build-depends:
    base >=4.9 && <5,
    integer-roots,
    smallcheck >=1.2 && <1.3,
    tasty >=0.10,
    tasty-hunit >=0.9 && <=0.11.1,
    tasty-quickcheck >=0.9 && <=0.11.1,
    tasty-smallcheck >=0.8 && <0.9
  other-modules:
    Math.NumberTheory.Roots.CubesTests
    Math.NumberTheory.Roots.CubesTests_
    Math.NumberTheory.Roots.FourthTests
    Math.NumberTheory.Roots.FourthTests_
    Math.NumberTheory.Roots.GeneralTests
    Math.NumberTheory.Roots.GeneralTests_
    Math.NumberTheory.Roots.SquaresTests
    Math.NumberTheory.Roots.SquaresTests_
    Math.NumberTheory.TestUtils
    Math.NumberTheory.TestUtils.Wrappers
  type: exitcode-stdio-1.0
  main-is: Test.hs
  default-language: Haskell2010
  hs-source-dirs: test-suite
  ghc-options: 
               -Wall 
               -Widentities 
               -Wcompat 
               -threaded 
               -rtsopts 
               -with-rtsopts=-N6 -w
              --  -with-rtsopts=-K1028M-H128m-G2m-A-M512m-N6-w-c

benchmark integer-roots-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             BenchIntegerRoots.hs
  build-depends:       base
                     , integer-roots
                     , criterion >= 1.6.4.0
                     , random >= 1.3.1
  default-language:    Haskell2010
  ghc-options:
                       -fproc-alignment=64 
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N6-w-H128m-A32m

benchmark weigh
  type            : exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options     : -O2 
                    -fforce-recomp 
                    -- -threaded
                    -- -rtsopts
                    -- -with-rtsopts=-N6 -w
  main-is         : Main.hs
  hs-source-dirs  : bench/Weigh
  build-depends: base >= 4.15
               , integer-roots
               , random >= 1.3.1
               , time >= 1.12.2 && < 1.13
               , weigh

executable integer-roots-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.15 
                     , integer-roots
                     , random >= 1.3.1
                     , time >= 1.12.2 && < 1.13
                     , ghc-bignum >= 1.3
  default-language:    Haskell2010
  ghc-options:         -O2 -fforce-recomp
                       -Wall
                       -fproc-alignment=64 
                       -threaded
                       -rtsopts                       
                       -with-rtsopts=-N4 -w 
                    